--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,26 @@ language: node_js
 node_js:
   - lts/*
 
+cache:
+  directories:
+    - ~/.npm
+    - ~/.cache
+
+install:
+  - npm ci
+
 branches:
   only:
     - master
+    - tests
 
 before_script:
   - npm install -g firebase-tools
   - npm install -g @angular/cli
+  - npm start -- --silent &
 
 script:
+  - npm run cypress:run
   - npm run build:prod
 
 after_success:
