--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ branches:
     - tests
 
 before_script:
-  - npm install -g firebase-tools
-  - npm install -g @angular/cli
+  - npm i -g firebase-tools
+  - npm i -g @angular/cli
   - npm start -- --silent &
 
 script:
